# magic-regexp

./: README.md  magic-regexp.code-workspace  pyproject.toml
magic_regexp/: regex_builder.py  regex_builder_test.py  regex_construtor.py  regex_construtor_test.py
