[tool.poetry]
name = "magic-regexp"
version = "0.1.0"
description = ""
authors = ["Diego Queiroz <diegiwg@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_regexp"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
